--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
-#floating-panel {
-    margin-top: 15%;
+.floating-panel {
+    margin-top: 300px;
     position: absolute;
     z-index: 5;
-    width: 400px;
+    max-width: 300px;
     background-color: black;
-    min-height: 500px;
+    max-height: 500px;
     padding: 5px;
     border: 1px solid #999;
     text-align: center;
@@ -36,6 +36,10 @@ button {
     background-color: #4885ed;
 }
 
+.top {
+    margin-top: 25px;
+}
+
 .padd {
     padding: 10px 25px 10px 25px;
 }
@@ -51,11 +55,18 @@ button {
 
 .hello {
     background-color: white;
-    width: 300px; 
+    max-width: 300px; 
     height: 200px;
     color: black;
 }
 
 .overflow {
     overflow: scroll;
+}
+
+#toggle {
+    position: absolute;
+    background-color: black;
+    z-index: 8;
+    margin-top: 720px;
 }
