--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,14 @@
 .floating-panel {
-    margin-top: 300px;
     position: absolute;
     z-index: 5;
-    max-width: 300px;
-    background-color: black;
-    max-height: 500px;
+    background-color: white;
+    max-height: 98%;
+    max-width: 400px;
+    bottom: 100px;
+    left: 20px;
     padding: 5px;
     border: 1px solid #999;
     text-align: center;
-    font-family: 'Roboto','sans-serif';
-    line-height: 30px;
     padding-left: 10px;
 }
 
@@ -29,7 +28,9 @@ html, body {
 }
 
 .white {
-    color: white;
+    color: black;
+    margin-left: 25px;
+    margin-top: 25px;
 }
 
 button {
@@ -40,33 +41,55 @@ button {
     margin-top: 25px;
 }
 
-.padd {
+/*.padd {
     padding: 10px 25px 10px 25px;
-}
-
+}*/
 .left {
     padding-left: 0px;
 }
 
 .big {
     font-size: 20px;
-    margin-top: 25px;
+    margin-top: 50px;
 }
 
 .hello {
+    margin-top: 25px;
     background-color: white;
     max-width: 300px; 
     height: 200px;
+    margin-bottom: 25px;
+    overflow-x: hidden;
     color: black;
 }
 
 .overflow {
-    overflow: scroll;
+    overflow: auto;
 }
 
 #toggle {
     position: absolute;
     background-color: black;
     z-index: 8;
-    margin-top: 720px;
+    max-height: 98%;
+    left: 20px;
+    bottom: 20px;
+}
+
+.list {
+    background-color: white;
+    height: 35px;
+}
+
+.none {
+    text-decoration: none;
+    color: black;
+}
+
+.none:hover {
+    color: black;
+}
+
+.list:hover {
+    border: 1px solid grey;
 }
